Finished migration to play/scala backend

--- a/xebia-ios/www/build_20121207095239/index.html
+++ b/xebia-ios/www/build_20121207095239/index.html
@@ -65,9 +65,9 @@
                    "type":"post",
                    "url":"http://blog.xebia.fr/2012/12/05/vert-x-la-boite-a-outils/",
                    "slug":"vert-x-la-boite-a-outils",
-                   "comment_count":5,
-                   "title_plain":"Vert.x - La boîte à outils",
-                   "comment_status":"open",
+                   "commentCount":5,
+                   "titlePlain":"Vert.x - La boîte à outils",
+                   "commentStatus":"open",
                    "categories":[
                        {
                            "title":"Java / JEE",
