Fixing count on wordpress categories, fixing page load on html blog post

--- a/Resources/www/index.html
+++ b/Resources/www/index.html
@@ -87,9 +87,9 @@
            }
 
            $(document).ready(function() {
-               $.getJSON('http://localhost:8000/api/wordpress/post/5625', function(json) {
-                   onLoad(json);
-               });
+//               $.getJSON('http://localhost:8000/api/wordpress/post/5625', function(json) {
+//                   onLoad(json);
+//               });
            });
        </script>
 
