[WIP] Add TravisCI and XCTool support

--- a/Resources/www/index.html
+++ b/Resources/www/index.html
@@ -108,7 +108,7 @@
                    </ul>
                </div>
                <div id="post-header-body-content">
-                   <h1>{{post.author.first_name}} {{post.author.last_name}}</h1>
+                   <h1>{{post.author.firstname}} {{post.author.lastname}}</h1>
                    <h2>Publié le : <em>{{modified}}</em></h2>
                    <h2>
                        Tags : <em><ul id="post-tags" style="display: inline;">
